[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/start.gd" type="Script" id=1]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="start" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 35 )
text = "start"

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 200.0
margin_bottom = 55.0
min_value = 2.0
max_value = 10.0
value = 2.0
tick_count = 9

[node name="columns" type="Label" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 200.0
margin_bottom = 73.0
text = "placeholder"
align = 1

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 200.0
margin_bottom = 112.0
rect_min_size = Vector2( 200, 35 )
text = "exit"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
